# git-credit

./: .codecov.yaml  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  deny.toml  typos.toml
.github/workflows/: audit.yaml  bot.yaml  ci.yaml  release.yaml
src/: cli.rs  error.rs  filter.rs  git.rs  github.rs  lib.rs  main.rs  output.rs  stats.rs
tests/: cli.rs
tests/common/: mod.rs
