[package]
name = "git-credit"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
authors = ["Mathieu Scheltienne <mathieu.scheltienne@gmail.com>"]
description = "Precise per-author contribution stats that see through squash merges"
license = "MIT"
repository = "https://github.com/mscheltienne/git-credit"
homepage = "https://github.com/mscheltienne/git-credit"
readme = "README.md"
keywords = ["git", "contributions", "squash-merge", "attribution", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
git2 = "0.20"
indicatif = "0.18"
rayon = "1"
regex = "1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow specific noisy pedantic lints
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[lints.rust]
unsafe_code = "deny"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
